assets/css/index.scss
---
---

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Montserrat:wght@400;500;600;700;800;900&display=swap');

/** COLORES **/
$verde:#01afaf;
$verdeClaro: #3bd2d278;
$verdeExtraClaro:#dbf4f4;
$verdeOscuro: #08a4a4;
$blanco:#FFFFFF;
$negro:#1c1c1c;
$gris:#919191;
$grisClaro:#bcbcbc;
$rojo:#ff3867;


/** FUENTES **/
$fuente_titulos:'Montserrat', sans-serif;
$fuente_textos: 'Lato', sans-serif;

html{
    scroll-behavior: smooth;
}
body{
    margin:0;
    padding:0;
    font-family: $fuente_textos;
    color:$negro;
    line-height: 1.7em;
    font-size: 1.21rem;
}
a{
    color: $verde;
    font-weight: 800;
}
header nav{
    float:right;
    width: 40%;
    margin: 139px 5% 0 0;
}
header nav ul{
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch;
    align-content: stretch;
}
header nav ul li{
    flex-grow: 1;
    font-size: 1.7rem;
}
header a{
    text-decoration: none;
}
.content{
    padding: 0 10% 0 10%;
}
.logo{
    width: 160px;
    margin: 53px 0 0 6%;
}
.barSup{
    height: 17px;
    background-color: $verdeClaro;
}
.header {
    padding: 0px 0 10px 0;
    z-index: 999;
    background-size: cover;
    background: url(/assets/img/curvas.jpg) 0px 0px #FFF no-repeat; 
}
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    padding: 0;
    -webkit-box-shadow: 0px -55px 14px 68px rgba(255,255,255,1);
    -moz-box-shadow: 0px -55px 14px 68px rgba(255,255,255,1);
    box-shadow: 0px -55px 14px 68px rgba(255,255,255,1);
}
.sticky .barSup{
    display: none;
}
/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
.sticky + .content {
  padding-top: 102px;
}
.sticky .logo {
    width: 103px;
    margin: 20px 0 0 6%;
}
.header.sticky {
    background: url(/assets/img/curvas.jpg) 0px -23px #FFF no-repeat;
}
footer{
    font-size: 1rem;
    margin-top: 20px;
    background: url(/assets/img/fondoVerdeClaro.jpg);
}
footer .bar{
    width: 100%;
    height:123px;
    background: url(/assets/img/curvasFooter.jpg) 0px 0px #FFF no-repeat;
}
.sticky nav{
    width: 40%;
    margin: 47px 5% 0 0;
}
.sticky li{
  font-size: 1.5rem
}
h2{
    margin: 80px 0 40px 0;
    color:$verde;
    font-size: 2.6rem;
    line-height: 4rem;
    font-family: $fuente_titulos;
    font-weight: 500;
}
h3{
    color:$verde;
    font-size: 1.9rem;
    font-family: $fuente_titulos;
    margin-top: 0;
    line-height: 2.5rem;
}
table{
    width:100%;
    margin-top: 40px;
}
th{
    text-transform: uppercase;
    font-size: 0.8em;
    text-align: center;
    background-color: $verde;
    color:$blanco;
    padding: 1.1%;
    line-height: 1.2em;
}
table th .mobile{
    display: none;
}
td{
    border-bottom: $grisClaro 1px solid;
    text-align: right;
    padding-right: 10px;
    width: 14%;
}
.nota.fuente{
    margin-top: 80px;
}
.negative{
    color: $rojo;
}
.positive{
    color: $verdeOscuro;
}
.negative, .positive{
    font-weight: 800;
    font-size: 0.9rem;
}
.arrow{
    width:10px;
}
.tendency{
    width:45px;
}
.diary, .tendency{
    display: block;
    float: right;
}
.arrow.up{
    transform: rotate(180deg);
}
.dashboard{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch;
    align-content: stretch;
}
.dashboard .card{
    flex-grow: 1;
    width: 24%;
    border: 1px solid $verdeClaro;
    margin:10px;
    padding: 20px;
    position: relative;
}
.number{
    font-size: 3rem;
    margin: 0 0 16px 0;
}
.dashboard svg{
    position: absolute;
    overflow: overlay;
    bottom: 9%;
    right: 7%;
}
.dashboard .icoConfirmados{
    width: 31%;
}
.dashboard .icoAltas{
    width: 26%;
}
.dashboard .icoFallecimientos{
    width: 26%;
}
.dashboard .icoIngresos{
    width: 26%;
}
.dashboard .icoUci{
    width: 26%;
}
.dashboard .icoSanitarios{
    width: 26%;
}
.dashboard .detalle{
    width: 60%;
}
.dashboard.today svg{
    position: absolute;
    overflow: overlay;
    bottom: 7%;
    right: 7%;
}
.dashboard.today .icoConfirmados{
    width: 31%;
}
.dashboard.today .icoAltas{
    width: 26%;
}
.dashboard.today .icoFallecimientos{
    width: 26%;
}
.cookie-law{
    background-color: $verdeExtraClaro;
    position: fixed;
    bottom: 0;
    right: 0;
    font-size: 0.9rem;
    line-height: 1.2rem;
    width: 33%;
}
#cookie-law .content{
    width: 90%;
    margin: auto 7%;
    padding: 5% 0 3% 0;
}
.icoCookie{
    width: 15%;
    float: right;
    margin: 30px 20px 90px 10px;
}
.accept-cookie-law{
    background-color: #01afaf;
    color: #fff;
    margin: 10px 20% 0 20%;
    display: block;
    text-align: center;
    padding: 7px;
    text-decoration: none; 
}


@media (max-width: 1050px){
    body{
        line-height: 1.2em;
        font-size: 1.5rem;
    }                           
    h3{
        font-size: 1.6rem;
        line-height: 2rem;
    }
    .dashboard svg, .dashboard.today svg{
        position: relative;
        margin: auto 40%;
        width: 34%!important;
        min-height:100px;
    }
    .dashboard .icoConfirmados, .dashboard.today .icoConfirmados{
        position: relative;
        margin: auto 37%;
        width: 40%!important; 
    }
    .dashboard .detalle {
        width: 100%;
    }
    .nota.fuente{
        font-size: 0.7rem;
    }
    table th .desktop{
        display: none;
    }
    table th .mobile{
        display: block;
    }
}
@media all and (max-width: 950px){
    .cookie-law{
        width: 60%;
    }
    header nav, .sticky nav{
        width: 60%;
    }
     header nav{
        margin: 101px 5% 0 0;
    }
    h2{
        font-size: 2.4rem;
    }
}

@media all and (max-width: 831px){
    .dashboard .card {
        flex-grow: 0;
        width: 38%;
    }
    .logo {
        width: 130px;
        margin: 46px 0 0 6%;
    }
    h2{
        line-height: 3rem;
    }
}
@media all and (max-width: 768px){
.header, .header.sticky{
        background: url(/assets/img/curvas_MVL.jpg) 0px 0px #FFF no-repeat;
    }
footer .bar{
        background: url(/assets/img/curvasFooter_MVL.jpg) 0px 0px #FFF no-repeat;
        height: 58px;
    }

}
@media all and (max-width: 425px){
    .dashboard .card{
        width:100%;
    }
    table{
        display: block;
        overflow: auto;
    }
    .logo {
        width: 56%;
        margin: 30% 22% 10% 22%;
    }
    .content {
        width: 84%;
        margin: 0 7% 0 7%;
        padding: 0;
    }
    header nav {
        float: none;
        width: 90%;
        margin: auto 5% auto 5%;
    }
    header nav ul {
        flex-wrap: nowrap;
        padding: 0;
    }
    header nav ul li {
        font-size: 1.5rem;
        text-align: center;
    }
    h2 {
        font-size: 1.8rem;
        line-height: 2.4rem;
        margin: 60px 0 20px 0;
    }
    h3 {
        text-align: center;
        padding: 0 0 10px 0;
    }
    .dashboard svg, .dashboard.today svg{
        width: 31%!important;
    }
    table .fecha, table td{
        font-size: 1rem;
    }
     table th{
        font-size: 0.8rem;
    }
    table .fecha{
        font-size: 0.9rem;
    }
    table td{
        font-size: 1.1rem;
    }
    .diary, .tendency {
        float: none;
    }
    .tendency {
        width: auto;
        padding: 0;
    }
    .nota.fuente{
        font-size: 1rem;
        line-height: 1.5rem;
    }
    .sticky{
        padding: 0 0 2% 0;
    }
    .sticky .logo {
        width: 20%;
        float: left;
        margin: 15px 0 0 20px;
    }
    .sticky nav {
        float: right;
        width: 68%;
        margin: 45px 2% 0 2%;
    }
    .sticky ul{
        margin: 0;
    }
    .sticky li {
        font-size: 1.2rem;
    }
    .header, .header.sticky{
        background: url(/assets/img/curvas_MVL.jpg) -110px 0px #FFF no-repeat;
    }
    .cookie-law{
        font-size: 0.9rem;
        line-height: 1.1rem;
        width: 100%;
    }
    #cookie-law .content{
        width: 90%;
        margin: auto 5%;
        padding: 5% 0 3% 0;
    }
    .icoCookie{
        width: 15%;
        margin: 30px 20px 90px 10px;
    }
}

