Fixed margin of dashboard icons on firefox

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -279,6 +279,7 @@ td{
         margin: auto 40%;
         width: 34%!important;
         min-height:100px;
+        bottom:0px;
     }
     .dashboard .icoConfirmados, .dashboard.today .icoConfirmados{
         position: relative;
